<resources>
    <string name="app_name">SDB Video</string>
    <string name="title_activity_video_player">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="u_dnt_have_account">You don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="did_u_forget_pwd">Did you forget your password?</string>
    <string name="who_is_it">Who is it?</string>
    <string name="remember_me">Remember me</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_phone">Telephone</string>
    <string name="prompt_postal_code">Postal code</string>
    <string name="prev_page">Prev.</string>
    <string name="next_page">Next</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_me">Me</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Download</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
</resources>