<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_app"
    tools:context=".ui.sign_up.SignUpActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="SIGN UP"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/previous_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_prev_24"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:textSize="@dimen/_18sdp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/prev_page"/>

    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
        android:id="@+id/spring_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dampingRatio="0.5"
        app:dotsColor="@color/white"
        app:dotsStrokeColor="@color/white"
        app:dotsCornerRadius="2dp"
        app:dotsSize="16dp"
        app:dotsSpacing="6dp"
        android:paddingTop="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@id/next_page"

        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:dotsStrokeWidth="2dp"
        app:stiffness="300"
        />
    <TextView
        android:id="@+id/next_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_next_24"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_2sdp"
       app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next_page"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:strokeColor="#304FFE"
        app:strokeWidth="@dimen/_2sdp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/sign_in"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/next_page"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@+id/next_page"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />
    <ProgressBar
        android:id="@+id/progress_bar_Sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>